js/src/tests/test262/built-ins/NativeErrors/SyntaxError/is-a-constructor.js
assert
.
sameValue
(
isConstructor
(
SyntaxError
)
true
'
isConstructor
(
SyntaxError
)
must
return
true
'
)
;
new
SyntaxError
(
)
;
reportCompare
(
0
0
)
;
